# jxrlib

./: .gitignore  CMakeLists.txt  Makefile  README.md
image/sys/: windowsmediaphoto.h
jxrgluelib/: JXRGlue.c  JXRGlue.h
